--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <section id="section2">
         <div id="header">
-          <h2>A man of vision is a man who becomes great</h2>
+          <h2>Vision is the art of seeing what is invisible to others</h2>
 
           <div id="datetime">
             <span id="day" data-testid="currentDay"></span>
